--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.10.3",
     "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.10.1",
     "tss-react": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
