--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "@mui/icons-material": "^5.14.19",
     "@mui/lab": "^5.0.0-alpha.155",
     "@mui/material": "^5.14.19",
+    "@mui/styles": "^5.15.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
+    "draft-js": "^0.11.7",
+    "draft-js-export-html": "^1.4.1",
     "mui-rte": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
