--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "@mui/icons-material": "^5.14.19",
     "@mui/lab": "^5.0.0-alpha.155",
     "@mui/material": "^5.14.19",
+    "@mui/material-next": "^6.0.0-alpha.113",
     "@mui/styles": "^5.15.0",
+    "@mui/x-date-pickers": "^6.18.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
+    "dayjs": "^1.11.10",
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
     "mui-rte": "^2.0.1",
@@ -24,6 +27,7 @@
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.10.1",
     "tss-react": "^4.9.3",
+    "uninstall": "^0.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
