--- a/package.json
+++ b/package.json
@@ -3,18 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.14.19",
     "@mui/lab": "^5.0.0-alpha.155",
     "@mui/material": "^5.14.19",
     "@mui/material-next": "^6.0.0-alpha.113",
     "@mui/styles": "^5.15.0",
-    "@mui/x-date-pickers": "^6.18.5",
+    "@mui/x-date-pickers": "^6.18.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
+    "date-fns": "^3.0.6",
     "dayjs": "^1.11.10",
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
