--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
     "draft-js-import-html": "^1.4.1",
+    "firebase": "^10.7.1",
     "mui-rte": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
